name:                apart
version:             0.1
description:         Get your structure and rip it apart
homepage:            https://github.com/iokasimov/tree
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/apart.git

library
  exposed-modules:
    Data.Apart,
    Data.Apart.Structures.Graph,
    Data.Apart.Structures.Stack,
    Data.Apart.Structures.Stream,
    Data.Apart.Structures.Tree.Rose,
    Data.Apart.Structures.Tree.Binary,
    Data.Apart.Structures.Tree.Prefix
    Data.Apart.Structures.Tree.AVL
  other-modules:
    Data.Apart.Shape
    Data.Apart.Apart
  build-depends:
    base == 4.*, free, comonad
  default-language:
    Haskell2010
  default-extensions:
    ExistentialQuantification,
    TypeApplications,
    DataKinds,
    KindSignatures,
    RankNTypes,
    TypeInType,
    TypeFamilies,
    TypeOperators,
    ViewPatterns,
    OverloadedStrings

executable example
  main-is:
    Example/Main.hs
  build-depends:
    base == 4.*, free, comonad
  other-modules:
    Data.Apart
  default-language:
    Haskell2010
  default-extensions:
    ExistentialQuantification,
    TypeApplications,
    DataKinds,
    KindSignatures,
    RankNTypes,
    TypeInType,
    TypeFamilies,
    TypeOperators,
    ViewPatterns,
    OverloadedStrings

test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    Test/Apart.hs
  build-depends:
    base == 4.*, free, comonad, hedgehog
  default-extensions:
    ExistentialQuantification,
    TypeApplications,
    DataKinds,
    KindSignatures,
    RankNTypes,
    TypeInType,
    TypeFamilies,
    TypeOperators,
    ViewPatterns,
    OverloadedStrings
