name:                splitted
version:             0.1
description:         Splitted data structures
homepage:            https://github.com/iokasimov/tree
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/splitted.git

library
  exposed-modules:
    Data.Splitted,
    Data.Tree.Rose,
    Data.Tree.Binary,
    Data.Tree.Prefix,
    Data.Tree.Finger
  other-modules:
    Data.Shape
  build-depends:
    base == 4.*, free, comonad
  default-language:
    Haskell2010
  default-extensions:
    ExistentialQuantification,
    TypeApplications,
    DataKinds,
    KindSignatures,
    PolyKinds,
    TypeInType,
    RankNTypes,
    TypeFamilies,
    TypeOperators

executable example
  main-is:
    Example/Main.hs
  build-depends:
    base == 4.*, free, comonad
  other-modules:
    Data.Splitted,
    Data.Shape
  default-language:
    Haskell2010
  default-extensions:
    ExistentialQuantification,
    TypeApplications,
    DataKinds,
    KindSignatures,
    PolyKinds,
    TypeInType,
    RankNTypes,
    TypeFamilies,
    TypeOperators
