name:                tree
version:             0.1
description:         Generic trees implementation
homepage:            https://github.com/iokasimov/tree
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/tree.git

library
  exposed-modules:     Data.Tree
  build-depends:       base == 4.*, free, comonad
  default-language:    Haskell2010
  default-extensions:  TypeSynonymInstances
